--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@ ul
 .section
 {
     background-color: var(--bg-black-900);
-    min-height: 100vh;
+    /* min-height: 100vh; */
     display: block;
     padding: 0 30px;
     opacity: 1;
@@ -419,8 +419,8 @@ h3.my-profession
 
 .about .about-content .personal-info
 {
-    flex: 0 0 60%;
-    max-width: 60%;
+    flex: 0 0 40%;
+    max-width: 40%;
     margin-top: 40px;
 }
 
@@ -450,6 +450,7 @@ h3.my-profession
 .about .about-content .personal-info .buttons
 {
     margin-top:30px;
+    margin-inline: auto;
 }
 
 .about .about-content .personal-info .buttons .btn
@@ -460,8 +461,8 @@ h3.my-profession
 
 .about .about-content .skills
 {
-    flex: 0 0 40%;
-    max-width: 40%;
+    flex: 0 0 60%;
+    max-width: 60%;
     margin-top: 40px;
 }
 
@@ -745,8 +746,8 @@ h3.my-profession
 
 .contact .contact-info-item
 {
-    flex: 0 0 25%;
-    max-width: 25%;
+    flex: 0 0 33%;
+    max-width: 33%;
     text-align: center;
     margin-bottom: 60px;
 }
@@ -756,7 +757,8 @@ h3.my-profession
     display: inline-block;
 }
 
-.contact .contact-info-item .icon .fa
+.contact .contact-info-item .icon .fa,
+.contact .contact-info-item .icon .fab
 {
     font-size: 25px;
     color: var(--skin-color);
@@ -892,5 +894,19 @@ h3.my-profession
     {
         flex: 0 0 100%;
         max-width: 100%;
+    }
+
+    .home
+    {
+        min-height: max-content;
+        padding-top: 3rem;
+        padding-bottom: 3rem;
+    }
+
+    .section .container
+    {
+        padding-top: 0;
+        padding-bottom: 0;
+        margin: 0 auto;
     }
 }
